[package]
name = "telegram-bot-api-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
awc = "3.7.0"
env_logger = "0.11.8"
futures-core = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
tokio = { version = "1.45.1", features = ["fs"] }
tokio-util = "0.7.15"
url = "2.5.4"
